Cleaned up typography. Bugfixes. Better logging to chase down the 403 issue.

--- a/app/src/main/res/layout/item_active_game_card.xml
+++ b/app/src/main/res/layout/item_active_game_card.xml
@@ -68,11 +68,11 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:fontFamily="@font/ubuntu_medium"
                     android:gravity="left"
                     android:maxLines="1"
                     android:textSize="14sp"
                     tools:text="MrAlex"
+                    android:textStyle="bold"
                     android:textColor="@color/colorTextSecondary"
                     />
 
@@ -125,7 +125,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginBottom="10dp"
-                android:fontFamily="@font/ubuntu_medium"
+                android:textStyle="bold"
                 android:textColor="@color/colorTextSecondary"
                 android:textSize="12sp"
                 />
@@ -152,7 +152,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="@id/time_label"
                 android:layout_marginBottom="10dp"
-                android:fontFamily="@font/ubuntu_medium"
+                android:textStyle="bold"
                 android:textColor="@color/colorTextSecondary"
                 android:textSize="12sp"
                 />
