--- a/app/src/main/res/layout/item_new_game.xml
+++ b/app/src/main/res/layout/item_new_game.xml
@@ -5,8 +5,6 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingLeft="20dp"
-    android:paddingRight="20dp"
     android:background="?android:selectableItemBackground"
     >
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -14,6 +12,9 @@
         android:layout_height="56dp"
         app:cardCornerRadius="28dp"
         app:cardBackgroundColor="@color/white"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="12dp"
         >
         <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
@@ -38,9 +39,9 @@
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorTextSecondary"
+        android:textColor="#989898"
         tools:text="Online"
-        android:textSize="14sp"
+        android:textSize="12sp"
         android:gravity="center"
         android:layout_marginTop="4dp"
         />
