--- a/app/src/main/res/layout/item_active_game_card.xml
+++ b/app/src/main/res/layout/item_active_game_card.xml
@@ -49,61 +49,62 @@
             android:layout_marginLeft="25dp"
             >
 
-            <LinearLayout
-                android:id="@+id/first_row"
+            <TextView
+                android:id="@+id/opponent_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="20dp"
+                android:gravity="left"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:maxWidth="190dp"
+                android:textColor="@color/colorTextSecondary"
+                android:textSize="14sp"
+                android:textStyle="bold"
                 android:layout_marginTop="10dp"
-                android:gravity="right"
+                app:layout_constraintRight_toLeftOf="@+id/opponent_rank"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constrainedWidth="true"
-                >
+                tools:text="Bula Bistrucizatorul"
+                />
 
-                <TextView
-                    android:id="@+id/opponent_name"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="left"
-                    android:maxLines="1"
-                    android:textSize="14sp"
-                    tools:text="MrAlex"
-                    android:textStyle="bold"
-                    android:textColor="@color/colorTextSecondary"
-                    />
+            <TextView
+                android:id="@+id/opponent_rank"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:fontFamily="@font/ubuntu_condensed_regular"
+                android:textColor="@color/colorTextSecondary"
+                android:textSize="12sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/opponent_flag"
+                app:layout_constraintLeft_toRightOf="@+id/opponent_name"
+                tools:text="14k"
+                app:layout_constraintBaseline_toBaselineOf="@id/opponent_name"
+                />
 
-                <TextView
-                    android:id="@+id/opponent_rank"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:fontFamily="@font/ubuntu_condensed_regular"
-                    android:textSize="12sp"
-                    tools:text="14k"
-                    android:textColor="@color/colorTextSecondary"
-                    />
-
-                <android.support.text.emoji.widget.EmojiAppCompatTextView
-                    android:id="@+id/opponent_flag"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:textSize="14sp"
-                    android:layout_gravity="center_vertical"
-                    />
-            </LinearLayout>
+            <android.support.text.emoji.widget.EmojiAppCompatTextView
+                android:id="@+id/opponent_flag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="8dp"
+                android:textSize="14sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintLeft_toRightOf="@+id/opponent_rank"
+                app:layout_constraintBaseline_toBaselineOf="@id/opponent_name"
+                />
 
             <TextView
                 android:id="@+id/your_turn_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/first_row"
+                app:layout_constraintTop_toBottomOf="@id/opponent_name"
                 android:text="Your turn"
                 android:background="@drawable/rounded_corners"
                 android:textColor="@color/white"
