--- a/app/src/main/res/layout/view_player_details.xml
+++ b/app/src/main/res/layout/view_player_details.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     tools:maxHeight="150dp"
     >
 
@@ -38,7 +38,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="@id/top_guide"
         android:layout_marginLeft="24dp"
-        app:layout_constraintHeight_max="70dp"
+        app:layout_constraintHeight_max="80dp"
+        app:layout_constraintVertical_weight="1"
         >
 
         <android.support.v7.widget.AppCompatImageView
