--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,7 +14,7 @@
         app:layout_constraintBottom_toTopOf="@id/board_container"
         />
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/board_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -31,7 +31,7 @@
             android:id="@+id/board"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
     <io.zenandroid.onlinego.views.PlayerDetailsView
         android:id="@+id/whiteDetailsView"
@@ -42,7 +42,7 @@
         app:layout_constraintBottom_toTopOf="@id/playControls"
         />
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/playControls"
@@ -56,7 +56,7 @@
             android:layout_height="40dp"
             android:orientation="horizontal"
             >
-            <android.support.v7.widget.AppCompatImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/menuButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -68,7 +68,7 @@
                 android:clickable="true"
                 android:focusable="true"
                 />
-            <android.support.v7.widget.AppCompatImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/discardButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -81,7 +81,7 @@
                 android:clickable="true"
                 android:focusable="true"
                 />
-            <android.support.v7.widget.AppCompatImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/resignButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -90,7 +90,7 @@
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 />
-            <android.support.v7.widget.AppCompatImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/passButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -101,7 +101,7 @@
                 android:paddingBottom="10dp"
                 />
 
-            <android.support.v7.widget.AppCompatImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/analyzeButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -112,7 +112,7 @@
                 android:paddingBottom="10dp"
                 />
 
-            <android.support.v7.widget.AppCompatImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/analysisDisabledButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -122,7 +122,7 @@
                 android:paddingBottom="10dp"
                 />
 
-            <android.support.v7.widget.AppCompatImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/previousButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -135,7 +135,7 @@
                 android:clickable="true"
                 android:focusable="true"
                 />
-            <android.support.v7.widget.AppCompatImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/nextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -145,7 +145,7 @@
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 />
-            <android.support.v7.widget.AppCompatImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/autoButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -155,7 +155,7 @@
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 />
-            <android.support.v7.widget.AppCompatImageView
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/confirmButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -169,5 +169,5 @@
                 android:focusable="true"
                 />
         </LinearLayout>
-    </android.support.v7.widget.CardView>
-</android.support.constraint.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
