--- a/app/src/main/res/layout/item_active_game_card.xml
+++ b/app/src/main/res/layout/item_active_game_card.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<androidx.cardview.widget.CardView
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -25,7 +25,7 @@
             android:layout_height="match_parent"
             android:background="@color/colorPrimary"
             />
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:id="@+id/board_card"
             android:layout_width="75dp"
             android:layout_height="75dp"
@@ -41,8 +41,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 />
-        </android.support.v7.widget.CardView>
-        <android.support.constraint.ConstraintLayout
+        </androidx.cardview.widget.CardView>
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -85,7 +85,7 @@
                 app:layout_constraintBaseline_toBaselineOf="@id/opponent_name"
                 />
 
-            <android.support.text.emoji.widget.EmojiAppCompatTextView
+            <androidx.emoji.widget.EmojiAppCompatTextView
                 android:id="@+id/opponent_flag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -173,6 +173,6 @@
                 android:layout_marginRight="30dp"
                 android:textColor="@color/colorTextSecondary"
                 />
-        </android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
