--- a/app/src/main/res/layout/item_new_game.xml
+++ b/app/src/main/res/layout/item_new_game.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="?android:selectableItemBackground"
     >
-    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="56dp"
         android:layout_height="56dp"
         app:cardCornerRadius="28dp"
@@ -16,7 +16,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="12dp"
         >
-        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:cardCornerRadius="26dp"
@@ -33,8 +33,8 @@
                 android:layout_gravity="center_vertical"
                 android:padding="12dp"
                 />
-        </android.support.v7.widget.CardView>
-    </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
