Joseki Explorer improvements

--- a/app/src/main/res/layout/view_new_challenge.xml
+++ b/app/src/main/res/layout/view_new_challenge.xml
@@ -26,6 +26,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_add"
+        app:tint="@color/white"
         app:fabSize="normal"
         app:backgroundTint="@color/colorAccent"
         />
@@ -41,6 +42,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_person_filled"
         app:fabSize="mini"
+        app:tint="@color/white"
         app:backgroundTint="@color/colorAccent"
         android:visibility="gone"
         tools:visibility="visible"
@@ -72,7 +74,7 @@
         app:layout_constraintBottom_toTopOf="@+id/onlineFab"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_challenge"
-        android:tint="@color/white"
+        app:tint="@color/white"
         app:fabSize="mini"
         app:backgroundTint="@color/colorAccent"
         android:visibility="gone"
