--- a/app/src/main/res/layout/item_learn.xml
+++ b/app/src/main/res/layout/item_learn.xml
@@ -22,6 +22,22 @@
         app:layout_constraintBottom_toBottomOf="parent"
         />
     <TextView
+        android:id="@+id/badge"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|top"
+        android:background="@drawable/oval"
+        android:elevation="2dp"
+        android:gravity="center"
+        android:text="!"
+        android:textColor="#FFFFFF"
+        app:layout_constraintDimensionRatio="w,1:1"
+        app:layout_constraintEnd_toEndOf="@id/iconView"
+        app:layout_constraintTop_toTopOf="@id/iconView"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        />
+    <TextView
         android:id="@+id/titleView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
