--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -13,7 +13,7 @@
         <item name="android:windowBackground">@color/colorOffWhite</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
     </style>
-
+`
     <style name="LoginLabel">
         <!-- Hint color and label color in FALSE state -->
         <item name="android:textColorHint">#99FFFFFF</item>
@@ -30,7 +30,8 @@
         <item name="colorAccent">@color/colorPrimaryDark</item>
     </style>
 
-    <style name="LoginActivity" parent="AppTheme">
+    <style name="LoginActivity" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="android:windowBackground">@color/loginBackground</item>
     </style>
 </resources>
