Joseki Explorer spit 'n' polish

--- a/app/src/main/res/layout/fragment_joseki.xml
+++ b/app/src/main/res/layout/fragment_joseki.xml
@@ -79,6 +79,9 @@
                 android:layout_weight="1"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
                 />
 
             <androidx.appcompat.widget.AppCompatImageView
@@ -103,6 +106,9 @@
                 android:layout_weight="1"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
                 />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
