Fixes acristescu/OnlineGo#57 . Setting to show/hide player ranks

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -13,6 +13,11 @@
             android:title="Game Settings"
         >
         <SwitchPreference
+            android:key="hide_ranks"
+            android:title="Hide player ranks"
+            android:defaultValue="false"
+            />
+        <SwitchPreference
             android:key="show_coordinates"
             android:title="Show Board Coordinates"
             android:defaultValue="false"
