Challenge feature improvements (added Analysis and Private pickers, fixes Ranked field not taken into account, human/bot differentiation) (#58)
* Support for the disable analysis toggle when creating a challenge

* added private field picker in custom challenges
added ui_class field (human/bot, provisional ranking, timeout habits)
human/bot differentiation in challenges
corrected/aligned POST challenge JSON (fixes bug of Ranking never being accepted as True)
typos

--- a/app/src/main/res/layout/bottom_sheet_new_challenge.xml
+++ b/app/src/main/res/layout/bottom_sheet_new_challenge.xml
@@ -39,6 +39,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 />
+            <io.zenandroid.onlinego.newchallenge.NameValueButton
+                android:id="@+id/disableAnalysisView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                />
         </LinearLayout>
         <Space
             android:layout_width="0dp"
@@ -63,6 +69,12 @@
                 />
             <io.zenandroid.onlinego.newchallenge.NameValueButton
                 android:id="@+id/rankedView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                />
+            <io.zenandroid.onlinego.newchallenge.NameValueButton
+                android:id="@+id/privateView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
