Setting to show/hide player ranks (#60)
* Fixes acristescu/OnlineGo#57 . Setting to show/hide player ranks

* corrected naming (should be "show player ranks") instead of "hide"

* moved showRanks setting check to View level

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -13,6 +13,11 @@
             android:title="Game Settings"
         >
         <SwitchPreference
+            android:key="show_ranks"
+            android:title="Show player ranks"
+            android:defaultValue="true"
+            />
+        <SwitchPreference
             android:key="show_coordinates"
             android:title="Show Board Coordinates"
             android:defaultValue="false"
